fix: 来信轮询失效根因(子进程输出管道死锁)+ 已读即索要简历
根因(2026-09-26 实测,胡先生已回复未被索要的直接原因):
- LiepinCliExecutor 等待子进程退出期间不消费 stdout;chatlist 30 会话输出 68KB
  超过管道缓冲区(约64KB)后子进程写阻塞、永不退出,整段命令 3 分钟假超时被强杀,
  每小时轮询连续失败、回复/已读全部漏处理(手动运行正常是因终端会消费管道)
- 修复: 输出重定向到临时文件(超时时可读到部分输出记日志,便于诊断)

新增与加固:
- 已读即索要: 会话级 oppositeRead=1(对方已读我方最新消息,真机样本对照界面验证,
  分布0/1符合UI) → 不等回复直接索要;复用门槛/评分/REQUESTED 守卫,不额外拉消息
- chatlist 固定取 100 条(CLI 上限): 26 条新招呼曾把已回复候选人挤出 30 条窗口
- 轮询失败(非风控类)轮内重试一次;索要未确认时记录 CLI 详情(区分按钮不可点/点击未确认)
- CLI 加固: CDP 协议超时收敛 60s(默认180s)、导航/页内请求 30s 超时、
  自动化专用页签(状态文件+targetId 找回;window.name 被站点加载时清掉故改用文件;
  不再驱动用户正在使用的页面)、LIEPIN_DEBUG_STEPS 步骤日志
- 新增诊断脚本 probe-chatlist-timeout/read-field/read-scan

测试: 后端 194/194 全绿(新增 9);CLI 153/153 全绿(新增 4)
真机验证: chatlist 由 3 分钟强杀变为 61 秒完成;已读触发 5 例、回复路径 1 例索要尝试;
两轮共 26 条招呼(专用页签复用正常,用户页面不再被导航)
注: 16:37 账号触发安全验证特征熔断(按设计自动停止),待人工处理